<resources>
    <string name="app_name">frapp</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="frapp">frapp</string>
    <string name="login" translatable="true">login</string>
    <string name="signup" translatable="true">signup</string>
    <string name="profile" translatable="true">profile</string>
    <string name="settings" translatable="true">settings</string>
    <string name="upload" translatable="true">upload</string>
    <string name="next">next</string>
    <string name="hello" translatable="true">hello</string>
    <string name="choose_font_size" translatable="true">Choose font size</string>
    <string name="font_size" translatable="true">font size</string>
    <string name="select_preferred_language">Select preferred language</string>
    <string name="select_birthday" translatable="true">Select birthday</string>
    <string name="upload_a_profile_picture" translatable="true">Upload a profile picture</string>
    <string name="upload_from_gallery" translatable="true">Upload from gallery</string>
    <string name="open_camera" translatable="true">Open camera</string>
    <string name="edit_your_profile" translatable="true">Edit your profile</string>
    <string name="language" translatable="true">Language</string>
    <string name="birthday" translatable="true">Birthday</string>
    <string name="back" translatable="true">Back</string>
    <string name="logout" translatable="true">Logout</string>
    <string name="upload_artifact" translatable="true">Upload artifact</string>
    <string name="date_of_artifact" translatable="true">Date of artifact</string>
    <string name="add_a_description" translatable="true">Add a description</string>
    <string name="add_tags" translatable="true">Add tags</string>
    <string name="error" translateable="true">Error</string>
    <string name="delete_comment" translateable="true">Delete comment?</string>
    <string name="delete_artifact" translateable="true">Delete artifact?</string>
    <string name="delete" translateable="true">Delete</string>
    <string name="cancel" translateable="true">Cancel</string>
    <string name="add_a_comment" translateable="true">Add a comment…</string>
    <string name="post" translateable="true">Post</string>
    <string name="search" translateable="true">Search</string>
    <string name="change_language" translateable="true">Change language</string>
    <string name="change_profile_picture" translatable="true">Change profile picture</string>



    <string-array name="languageOptions">
        <item>English</item>
        <item>Chinese</item>
    </string-array>

</resources>
