<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialSignup.InitialDPSelection">

    <TextView
        android:id="@+id/uploadDP"
        android:layout_width="285dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/upload_a_profile_picture"
        android:textSize="36sp"
        android:textStyle="bold"
        style="@style/AppTheme.Header"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginBottom="32dp"
        android:background="@drawable/next_arrow"
        android:onClick="openHomePage"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/dp"
        android:src="@drawable/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadDP" />

    <ImageButton
        android:id="@+id/uploadFromGalleryButton"
        android:layout_width="60dp"
        android:layout_height="50dip"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="selectPhotoFromGallery"
        android:background="@drawable/upload_gallery"
        android:text="@string/upload_from_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

    <ImageButton
        android:id="@+id/takePhotoButton"
        android:layout_width="60dp"
        android:layout_height="50dip"
        android:background="@drawable/camera"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/open_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadFromGalleryButton" />

    <TextView
        android:id="@+id/uploadFromGalleryText"
        style="@style/AppTheme.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_from_gallery"
        app:layout_constraintEnd_toEndOf="@+id/uploadFromGalleryButton"
        app:layout_constraintStart_toStartOf="@+id/uploadFromGalleryButton"
        app:layout_constraintTop_toBottomOf="@+id/uploadFromGalleryButton" />

    <TextView
        android:id="@+id/uploadFromCameraText"
        style="@style/AppTheme.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_camera"
        app:layout_constraintEnd_toEndOf="@+id/takePhotoButton"
        app:layout_constraintStart_toStartOf="@+id/takePhotoButton"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>